src/grammar.txt
expr : KEYWORD:VAR IDENTIFIER EQ expr
     : term ( (PLUS|MINUS) term)*

term : factor ( (MUL|DIV) factor)*

factor : (PLUS|MINUS) power
       
power : atom ( POW | factor )*

atom : INT|FLOAT|IDENTIFIER
     : LPAREN expr RPAREN
